--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -319,9 +319,13 @@ body {
             height: 100%;
 
             img {
-              border: 10px solid $first-colour;
+              border: 5px solid $first-colour;
               border-radius: 3px;
               width: 100%;
+
+              @media(min-width: $width-tablet) {
+                border-width:7px;
+              }
             }
           }
 
@@ -380,10 +384,12 @@ body {
           }
 
           div.section-two-thirds {
+            padding-bottom: 0;
 
             @media(min-width: $width-tablet) {
               width: 100%;
               padding: $spacing-m;
+              padding-bottom: 0;
             }
 
             @media(min-width: $width-desktop) {
@@ -453,7 +459,7 @@ body {
 
         div.container {
           display: flex;
-          justify-content: center;
+          justify-content: space-between;
 
           @media(min-width: $width-tablet) {
             display: none;
@@ -498,11 +504,13 @@ body {
           > div {
             display: flex;
             flex-wrap: wrap;
+            justify-content: flex-start;
+            align-items: center;
             width: 100%;
             height: 100%;
 
             @media(min-width: $width-tablet) {
-              width: 87%;
+              width: 90%;
             }
 
             div.section-third {
@@ -517,6 +525,7 @@ body {
               h3 {
                 font-size: $font-ml;
                 padding-bottom: $spacing-xs;
+                text-align: center;
               }
 
               h4 {
