Updated bio text.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -358,6 +358,10 @@ body {
             width: 100%;
             padding-top: $spacing-s;
             padding-bottom: $spacing-m;
+
+            p {
+              padding-bottom: $spacing-s;
+            }
           }
 
           div.section-third {
