--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -207,7 +207,8 @@ body {
       }
 
       div.hero {
-        height: 475px;
+        /* todo: fm - size using media query*/
+        height: 70vh;
         padding-top: $spacing-xxl;
         padding-bottom: $spacing-ms;
         transition: all 0.5s;
@@ -292,6 +293,27 @@ body {
         @media (min-width: $width-tablet) {
           div {
             flex-direction: row;
+          }
+        }
+
+        .down-arrow {
+          opacity: 100;
+          transition: opacity 1s;
+
+          &.is-hidden {
+            opacity: 0;
+          }
+        }
+
+        .hero-bottom-divder {
+          /* todo: fm - make less wide? */
+          width: 70vw;
+          border-color: white;
+          opacity: 100;
+          transition: opacity 1s;
+
+          &.is-hidden {
+            opacity: 0;
           }
         }
       }
