Removed test.css

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:400,700&display=swap');
-
+/* todo: fm - delete this folder*/
 // Colour Variables
 $first-colour: #272727;
 $second-colour: #4a6f9e;
