--- a/src/components/page/header/Header.css
+++ b/src/components/page/header/Header.css
@@ -1,8 +1,15 @@
 @value shared: "styles/shared.css";
 @value primary-colour from shared;
 
-.header {
-  width: 100vw;
+.is-full-height {
   height: 100vh;
+}
+
+/* todo: fm - change to main*/
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   background-color: primary-colour;
 }
