--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -1,3 +1,5 @@
 /* todo: fm - move this or split up*/
 @value primary-colour: #272727;
 @value secondary-colour: #4a6f9e;
+/* todo: fm - make brighter?*/
+@value font-colour-secondary: #d8d4d4;
