--- a/src/components/page/main/shared/Banner.css
+++ b/src/components/page/main/shared/Banner.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
 
+  /* todo: fm - variablise and share in AboutSection*/
   height: 6rem;
 
   font-size: font-size-l;
