--- a/src/components/page/main/shared/Banner.css
+++ b/src/components/page/main/shared/Banner.css
@@ -1,5 +1,5 @@
 @value shared: "styles/shared.css";
-@value secondary-colour, font-colour-secondary, font-size-l from shared;
+@value background-colour-secondary, font-colour-secondary, font-size-l from shared;
 
 .main {
   display: flex;
@@ -12,5 +12,5 @@
   font-size: font-size-l;
 
   color: font-colour-secondary;
-  background-color: secondary-colour;
+  background-color: background-colour-secondary;
 }
