--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -4,7 +4,7 @@
 @value background-colour-secondary: #272727;
 /* todo: fm - make brighter?*/
 @value font-colour-secondary: #d8d4d4;
-@value font-colour-primary: #0e0e0e;
+@value font-colour-primary: #020202;
 
 @value font-size-s: 1.2rem;
 @value font-size-m: 1.5rem;
