--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -8,5 +8,6 @@
 
 @value font-size-s: 1.2rem;
 @value font-size-m: 1.5rem;
+@value font-size-ml: 2rem;
 @value font-size-l: 3rem;
 @value font-size-xl: 5rem;
