--- a/src/components/shared/Technology.css
+++ b/src/components/shared/Technology.css
@@ -1,21 +1,21 @@
 @value shared: "styles/shared.css";
-@value font-colour-primary from shared;
+@value font-colour-primary, font-size-s from shared;
 
 .main {
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  width: 10rem;
-  height: 5.5rem;
+  width: 7rem;
+  height: 4.8rem;
 }
 
 .icon {
-  font-size: 3rem;
+  font-size: 2.5rem;
   color: #101010;
 }
 
 .name {
-  font-size: 1.2rem;
+  font-size: font-size-s;
   color: font-colour-primary;
 }
