--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -5,6 +5,7 @@
 /* todo: fm - make brighter?*/
 @value font-colour-secondary: #d8d4d4;
 @value font-colour-primary: #020202;
+@value font-colour-primary-bold: #0e0e0e;
 
 @value font-size-s: 1.2rem;
 @value font-size-m: 1.5rem;
