--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -492,6 +492,12 @@ body {
 
             p {
               padding-bottom: $spacing-s;
+
+              &.responsibilities-header {
+                margin-top: $spacing-s;
+                align-self: start;
+                padding-bottom: 0;
+              }
             }
 
             li {
